# Raymarch-Art

./: CMakeLists.txt  README.md  new_view.sh  test_shader.glsl
src/: file_browser.c  file_browser.h  log.c  log.h  main.c  my_gl_util.c  my_gl_util.h  settings.h  shader.c  shader.h  state.h  string.c  string.h  text.c  text.h  texture.c  texture.h  typedefs.h  util.c  util.h
src/views/: files_view.c  files_view.h  functions_view.c  functions_view.h  log_view.c  log_view.h  menu_view.c  menu_view.h  shader_view.c  shader_view.h  views.c  views.h
